support to specify algo name

--- a/templates/simple_with_algo.tex
+++ b/templates/simple_with_algo.tex
@@ -5,7 +5,9 @@
 \pagenumbering{gobble}
 \begin{document}
 \begin{algorithm}
-    \caption{}
+    \caption{
+        %s
+    }
     \begin{algorithmic}[1]
         %s
     \end{algorithmic}
