--- a/templates/simple_with_algo.tex
+++ b/templates/simple_with_algo.tex
@@ -1,4 +1,5 @@
 \documentclass{article}
+\usepackage[paperwidth=20cm, paperheight=20cm, top=0.5cm, left=0.5cm]{geometry}
 \usepackage{amsmath}
 \usepackage{algorithm}
 \usepackage{algorithmic}
